Procfile for custom deployment Heroku

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'org.springframework.boot' version '1.5.7.RELEASE'
 }
 
+apply plugin: 'spring-boot'
 apply plugin: 'war'
+apply plugin: 'java'
 
 apply plugin: 'eclipse-wtp'
 apply plugin: 'idea'
@@ -11,6 +13,11 @@ jar {
     baseName = 'hello'
     version = '1.0'
 }
+
+war {
+    baseName = 'webeng'
+}
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
