fixed issues in Spring doc

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+
+
 plugins {
     id 'org.springframework.boot' version '1.5.7.RELEASE'
 }
@@ -37,3 +39,13 @@ dependencies {
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
+task testJavadoc(type: Javadoc) {
+    source = sourceSets.test.allJava
+    classpath = sourceSets.test.compileClasspath
+    destinationDir = file("${buildDir}/docs/testjavadoc")
+    println (title == null? '<null>' : title)
+}
+
+check {
+    dependsOn javadoc, testJavadoc
+}
