--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 
 # App messages
-app.message=Hola alumno
+app.messageMorning=Good morning!
+app.messageAfternoon=Good afternoon!
+app.messageEvening=Good evening!
+app.messageNight=You should sleep, good night!
