New messages depending of the hour of the day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,4 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 
 # App messages
-app.messageMorning=Good morning!
-app.messageAfternoon=Good afternoon!
-app.messageEvening=Good evening!
-app.messageNight=You should sleep, good night!
+app.message=Hola alumno
