--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 
 # App messages
-app.message=Hola alumno 1
+app.message=Hola alumno
