Added interaction with the service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.level.org.springframework.web=INFO
 
 # App messages
 app.message=Hola alumno
+# App variable
+app.deadline=Oct 7, 2017 00:00:00
