--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# OS X #
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
